--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,13 +2,13 @@ group 'com.jhomlala.better_player.better_player'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.exoPlayerVersion = "2.18.1"
-    ext.lifecycleVersion = "2.4.0-beta01"
-    ext.annotationVersion = "1.2.0"
-    ext.workVersion = "2.7.0"
+    ext.exoPlayerVersion = "2.19.1"
+    ext.lifecycleVersion = "2.6.2"
+    ext.annotationVersion = "1.7.1"
+    ext.workVersion = "2.9.0"
     ext.coreVersion = "1.6.0"
-    ext.gradleVersion = "7.0.2"
-    ext.kotlinVersion = "1.5.31"
+    ext.gradleVersion = "7.1.2"
+    ext.kotlinVersion = "1.8.0"
 
     repositories {
         google()
@@ -32,7 +32,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 34
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
